Compilador DKXX/src/src/parser/gramatica.txt
INIT --> declare{DEF}main{PROG}

DEF --> DFUNCION DEF | DECLARACION DEF | lamba
PROG --> FUNCION; PROG | DECLARACION PROG | ID ASIGNACION PROG | while(EXPRESION){PROG} PROG | if(EXPRESION){CUERPO} PROG | output(EXPRESION); PROG | lamba
CUERPO --> return EXPRESION; CUERPO| PROG CUERPO | lamba

DFUNCION --> function RETURN ID(PARAMETRO){CUERPO}
RETURN --> TYPE | lamba

PARAMETRO --> TYPE ID PARAMCONCAT |lamba
PARAMCONCAT --> ,TYPE ID PARAMCONCAT | lamba

DECLARACION --> const TYPE ID DECLAREND | TYPE ID DECLAREND
DECLAREND --> ASIGNACION | ;

TYPE --> int | bool

ASIGNACION --> = EXPRESION;

EXPRESION --> VALOR OPERACION | (EXPRESION) OPERACION
VALOR --> ID | NUMERO | BOLEANO | FUNCION
OPERACION --> OP EXPRESION | lamba

OP --> MULT | DIV | SUMA | RESTA | MAYORQUE | MENORQUE | MAYORIGU | MENORIGU | IGUAL | OR | AND

FUNCION --> input() | ID(INPARAM)
INPARAM --> EXPRESION INPARAMCONC | lamba
INPARAMCONC --> ,EXPRESION INPARAMCONC | lamba
